# fastapi_project

./: main.py  pyproject.toml
.github/workflows/: action.yml
app/tests/: test_create_article.py
fastApiProject/: .gitignore  pyproject.toml  test.sh
fastApiProject/app/configs/: base_settings.py
fastApiProject/app/test/: test_simple.py
fastApiProject/app/tests/: fixtures.py  test_create_article.py
